--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <div class="hero">
       <div class="logo logo-container">cocowrite</div>
-      <p>You focus on the content, let cocowrite to
+      <p>You focus on the content, and let cocowrite
       figure out the typography.</p>
       <p>Two steps to generate stylished pdf document from your
       markdown file. <em>Try it now!</em></p>
