--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	</div>
 	<small style="padding-left:3em;">* Checkout the supported markdown
 	syntax <a href="http://johnmacfarlane.net/pandoc/README.html#pandocs-markdown">here</a>. Notice
-	that images are not supported yet.</small>
+	that Asian characters are not supported yet.</small>
       </div>
     </div>
 
