--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
 	<div id="dropzone" class="dropzone">
 	</div>
 	<small style="padding-left:3em;">* Checkout the supported markdown
-	syntax <a href="http://johnmacfarlane.net/pandoc/README.html#pandocs-markdown">here</a>. Notice
-	that Asian characters are not supported yet.</small>
+	syntax <a href="http://johnmacfarlane.net/pandoc/README.html#pandocs-markdown">here</a>. Asian characters are not supported yet.</small>
       </div>
     </div>
 
