--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       
-      ga('create', 'UA-45608775-1', 'cocowrite.com');
+      ga('create', 'UA-45608775-1', 'http://www.cocowrite.com');
       ga('send', 'pageview');
       
     </script>
